--- a/web-Implementation/requirements.txt
+++ b/web-Implementation/requirements.txt
@@ -4,7 +4,7 @@ torchvision==0.18.0
 transformers==4.41.0
 pillow==10.3.0
 numpy==1.26.4
-opencv-python==4.8.0
+opencv-python>=4.5.5,<4.8.0
 matplotlib==3.8.4
 requests==2.31.0
 aiohttp==3.9.5
